--- a/blog-post.html
+++ b/blog-post.html
@@ -23,6 +23,7 @@
                         <li class="nav-item"><a class="nav-link" href="resume.html">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="blog.html">Blog</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="infoform.html">Sign Up</a></li>
                     </ul>
                 </div>
             </div>
