--- a/blog.html
+++ b/blog.html
@@ -44,7 +44,7 @@
                 <div class="col-lg-8">
                     <!-- Featured blog post-->
                     <div class="card mb-4">
-                        <a href="blog-post.html"><img class="card-img-top" src="assets/img/blog1.jpg" alt="..." /></a>
+                        <a href="blog-post.html"><img class="card-img-top" src="assets/img/blog1.jpg" alt="Click Here!" /></a>
                         <div class="card-body">
                             <div class="small text-muted">September 1, 2021</div>
                             <h2 class="card-title">Featured Post Title</h2>
@@ -57,7 +57,7 @@
                         <div class="col-lg-6">
                             <!-- Blog post-->
                             <div class="card mb-4">
-                                <a href="blog-post.html"><img class="card-img-top" src="assets/img/blog2.jpg" alt="..." /></a>
+                                <a href="blog-post.html"><img class="card-img-top" src="assets/img/blog2.jpg" alt="Click Here!" /></a>
                                 <div class="card-body">
                                     <div class="small text-muted">September 1, 2021</div>
                                     <h2 class="card-title h4">Post Title</h2>
@@ -67,7 +67,7 @@
                             </div>
                             <!-- Blog post-->
                             <div class="card mb-4">
-                                <a href="blog-post.html"><img class="card-img-top" src="assets/img/blog3.jpg" alt="..." /></a>
+                                <a href="blog-post.html"><img class="card-img-top" src="assets/img/blog3.jpg" alt="Click Here!" /></a>
                                 <div class="card-body">
                                     <div class="small text-muted">September 1, 2021</div>
                                     <h2 class="card-title h4">Post Title</h2>
@@ -79,7 +79,7 @@
                         <div class="col-lg-6">
                             <!-- Blog post-->
                             <div class="card mb-4">
-                                <a href="blog-post.html"><img class="card-img-top" src="assets/img/blog4.jpg" alt="..." /></a>
+                                <a href="blog-post.html"><img class="card-img-top" src="assets/img/blog4.jpg" alt="Click Here!" /></a>
                                 <div class="card-body">
                                     <div class="small text-muted">September 1, 2021</div>
                                     <h2 class="card-title h4">Post Title</h2>
@@ -89,7 +89,7 @@
                             </div>
                             <!-- Blog post-->
                             <div class="card mb-4">
-                                <a href="blog-post.html"><img class="card-img-top" src="assets/img/blog5.jpg" alt="..." /></a>
+                                <a href="blog-post.html"><img class="card-img-top" src="assets/img/blog5.jpg" alt="Click Here!" /></a>
                                 <div class="card-body">
                                     <div class="small text-muted">September 1, 2021</div>
                                     <h2 class="card-title h4">Post Title</h2>
