--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h5>ID: 1711076136</h5>
       <h5>Session: 2016-17</h5>
       <br>
-      <p class="lead my-3">I have designed a website which contains following pages using html5 & bootstrap</p>
+      <p class="lead my-3">I have designed a website using html5 & bootstrap, which contains following pages.</p>
     </div>
   </div>
 
